added get sale endpoint
