# api/docs/swagger.json
@@ -352,7 +352,27 @@
         }
       }
     },
-    "/action/{assetName}/sale": {
+    "/action/sale/{assetName}": {
+      "get": {
+        "tags": [
+          "action"
+        ],
+        "summary": "Get an sale for action",
+        "parameters": [
+          {
+            "name": "assetName",
+            "in": "path",
+            "description": "Name of the asset",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response with action sale"
+          }
+        }
+      },
       "post": {
         "tags": [
           "action"
@@ -376,7 +396,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful response with ACTION array from the database"
+            "description": "Successful response with action buy link"
           }
         }
       }
