# api/src/routes/action.js
@@ -10,7 +10,8 @@ router.route('/chain')
 router.route('/sales').get(validator(actionSchemas.getSales), actionController.getSales);
 router.route('/').get(validator(actionSchemas.getActions), actionController.getActions);
 router.route('/').post(validator(actionSchemas.mintAction), actionController.mintAction);
-router.route('/:assetName/sale').post(validator(actionSchemas.createActionSale), actionController.createActionSale);
+router.route('/sale/:assetName').post(validator(actionSchemas.createActionSale), actionController.createActionSale);
+router.route('/sale/:assetName/').get(validator(actionSchemas.getSale), actionController.getSale);
 router.route('/:assetName').get(validator(actionSchemas.getAction), actionController.getAction);
 router.route('/:assetName').delete(validator(actionSchemas.deleteAction), actionController.deleteAction);
 
